--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
         <!-- javascript -->
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.js"></script>
+        <script type="text/javascript" src="js/app.js"></script>
         <!-- !javascript -->
 
     </body>
